<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsTitle"
            android:textColor="#FFFFFF"
            android:textSize="34dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newScheduleSchool"
            android:textColor="#FFFFFF" />

        <Spinner
            android:id="@+id/school"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newSchedulePassword"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newScheduleID"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/studentID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newScheduleType"
            android:textColor="#FFFFFF" />

        <RadioGroup
            android:id="@+id/scheduleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/weeklyRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/newScheduleWeek" />

            <RadioButton
                android:id="@+id/dailyRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newScheduleDay" />

            <RadioButton
                android:id="@+id/specificWeekRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newScheduleWeekSpecific" />
        </RadioGroup>

        <TextView
            android:id="@+id/specificWeekLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newScheduleWeekSpecificPick"
            android:visibility="gone" />

        <EditText
            android:id="@+id/specificWeekNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:inputType="number"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/mainSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newScheduleMain" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom|right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/saveSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsSave" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>