<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/updateScheduleOnMobileNetwork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsAutomaticUpdate" />

    <CheckBox
        android:id="@+id/fullscreenMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsFullScreen" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsRestart" />

</LinearLayout>